cmake_minimum_required(VERSION 3.21)
project(Programmercarl)

set(CMAKE_C_STANDARD 99)

add_executable(LinkedList0 test0.cpp
        MyLinkNode.h)

add_executable(LinkedList1 test1.cpp
        MyLinkNode.h)

add_executable(LinkedList2 test2.cpp
        MyLinkNode.h)

add_executable(LinkedList3 test3.cpp
        MyLinkNode.h)

add_executable(LinkedList4 test4.cpp
        MyLinkNode.h)
